added copyright and license notice; updated sierra link

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -1,8 +1,27 @@
+<!--
+ * Copyright (C) 2019 Jörn Neumeyer
+ *
+ * This file is part of joern-neumeyer.de.
+ *
+ * joern-neumeyer.de is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * joern-neumeyer.de is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
+-->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="http://sierra-library.github.io/css/styles.min.css" />
+    <link rel="stylesheet" href="sierra.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>J&ouml;rn Neumeyer</title>
   </head>
@@ -22,7 +41,6 @@
         </noscript>
       </footer>
     </section>
-    <script type="text/javascript" src="load-header.js"></script>
-    <script type="text/javascript" src="load-footer.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
