added copyright and license notices

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,22 @@
+<!--
+ * Copyright (C) 2019 Jörn Neumeyer
+ *
+ * This file is part of joern-neumeyer.de.
+ *
+ * joern-neumeyer.de is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * joern-neumeyer.de is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
+-->
+
 Copyright &copy; 2019 J&ouml;rn Neumeyer<br />
 Styling is built on top of the <a href="https://sierra-library.github.io">Sierra library</a>, licensed under GPL-2.0-or-later.<br />
 The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de">GitHub</a>, licensed under GPL-3.0-or-later.
