added header list

--- a/header.html
+++ b/header.html
@@ -16,5 +16,5 @@
  * You should have received a copy of the GNU General Public License
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
-
-This is the header.
+<ul id="header-list">
+</ul>
