updated main message

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -33,7 +33,9 @@
         </noscript>
       </header>
       <main>
-        This will be the main part of the page.
+        <noscript>
+          Main content lodaing requires JavaScript.
+        </noscript>
       </main>
       <footer class="center-text">
         <noscript>
