added header and footer to index; added script tag for header scripts

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
   <body>
     <section class="container">
       <header>
-        <noscript>
-          Header loading requires JavaScript to be enabled.
-        </noscript>
+        <ul id="header-list">
+        </ul>
       </header>
       <main>
         <noscript>
@@ -38,11 +37,12 @@
         </noscript>
       </main>
       <footer class="center-text">
-        <noscript>
-          Footer loading requires JavaScript to be enabled.
-        </noscript>
+        Copyright &copy; 2019 J&ouml;rn Neumeyer<br />
+        Styling is built on top of the <a href="https://sierra-library.github.io">Sierra library</a>, licensed under GPL-2.0-or-later.<br />
+        The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de">GitHub</a>, licensed under GPL-3.0-or-later.
       </footer>
     </section>
     <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="header.js"></script>
   </body>
 </html>
