added license notice in footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <footer class="center-text">
         Copyright &copy; 2019 J&ouml;rn Neumeyer<br />
         Styling is built on top of the <a href="https://sierra-library.github.io">Sierra library</a>, licensed under GPL-2.0-or-later.<br />
-        The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de">GitHub</a>, licensed under GPL-3.0-or-later.
+        The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de">GitHub</a>, licensed under GPL-3.0-or-later.<br />
+        The content of this website as well as all articles is available under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
       </footer>
     </section>
     <script type="text/javascript" src="scripts.js"></script>
