added contact link

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,4 +17,8 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-contact page
+<p>If you consider getting in touch with me, you have the following options:</p>
+<ol>
+  <li>Send an E-Mail to <a href="mailto:contact@joern-neumeyer.de">contact@joern-neumeyer.de</a></li>
+  <li>a</li>
+</ol>
