--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   <body>
     <section class="container">
       <header>
-        <ul id="header-list">
-        </ul>
+        <div class="tabs" id="header-list"></div>
       </header>
       <main>
         <noscript>
