added ul for article listing

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -17,4 +17,6 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-articles page
+<h2>On this page you can find a list of articles I wrote about various topics.</h2>
+
+<ul id="articles-list"></ul>
