removed row class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <header>
         <div class="tabs" id="header-list"></div>
       </header>
-      <main class="row">
+      <main>
         <noscript>
           Main content lodaing requires JavaScript.
         </noscript>
