changed list to div

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -19,4 +19,4 @@
 
 <h2>On this page you can find a list of articles I wrote about various topics.</h2>
 
-<ul id="articles-list"></ul>
+<div id="articles-list"></div>
