extended sierra library copyright notice

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -48,5 +48,6 @@
   </div>
   <div class="col-sm-12 col-lg-10">
     Styling is powered by <a href="https://sierra-library.github.io">Sierra library</a>, licensed under GPL-2.0-or-later.
+    No copyright notices were found in the source code. Main contributors on GitHub: JoanClaret, maraisr
   </div>
 </div>
