added hrefs to sierra library editors

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -28,7 +28,7 @@
     <span class="bold">joern-neumeyer.de source code</span>
   </div>
   <div class="col-sm-12 col-lg-10">
-    The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de">GitHub</a>, licensed under GPL-3.0-or-later.
+    The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a>, licensed under GPL-3.0-or-later.
   </div>
 </div>
 <br />
@@ -38,7 +38,7 @@
   </div>
   <div class="col-sm-12 col-lg-10">
     The non-code works available on this website (e.g. articles in source and compiled form, images, etc.) are available under the
-    <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>, unless specified otherwise.
+    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution 4.0 International License</a>, unless specified otherwise.
   </div>
 </div>
 <br />
@@ -47,7 +47,9 @@
     <span class="bold">Sierra Library</span>
   </div>
   <div class="col-sm-12 col-lg-10">
-    Styling is powered by <a href="https://sierra-library.github.io">Sierra library</a>, licensed under GPL-2.0-or-later.
-    No copyright notices were found in the source code. Main contributors on GitHub: JoanClaret, maraisr
+    Styling is powered by <a href="https://sierra-library.github.io" target="_blank" rel="noreferrer">Sierra library</a>, licensed under GPL-2.0-or-later.
+    No copyright notices were found in the source code. Main contributors on GitHub:
+    <a href="https://github.com/JoanClaret" target="_blank" rel="noreferrer">JoanClaret</a>,
+    <a href="https://github.com/maraisr" target="_blank" rel="noreferrer">maraisr</a>
   </div>
 </div>
