added heading class

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -17,6 +17,8 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<h2>On this page you can find a list of articles I wrote about various topics.</h2>
+<p class="section-heading">
+  On this page you can find a list of articles I wrote about various topics.
+</p>
 
 <div id="articles-list"></div>
