added proper heading for copyright page

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -17,12 +17,9 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<h1>
-  On this page you find all copyright notices regarding this website's content
-</h1>
+<p class="chapter-heading">Copyright notices</p>
 
-
-<br />
+<p>On this page you find all copyright notices regarding this website's content.</p>
 <div class="row">
   <div class="col-sm-12 col-lg-2">
     <span class="bold">joern-neumeyer.de source code</span>
