updated titles of license blocks

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -22,7 +22,7 @@
 <p>On this page you find all copyright notices regarding this website's content.</p>
 <div class="row">
   <div class="col-sm-12 col-lg-2">
-    <span class="bold">joern-neumeyer.de source code</span>
+    <span class="bold">source code of joern-neumeyer.de</span>
   </div>
   <div class="col-sm-12 col-lg-10">
     The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a>, licensed under GPL-3.0-or-later.
@@ -31,7 +31,7 @@
 <br />
 <div class="row">
   <div class="col-sm-12 col-lg-2">
-    <span class="bold">joern-neumeyer.de non-code Works</span>
+    <span class="bold">non-code works on joern-neumeyer.de</span>
   </div>
   <div class="col-sm-12 col-lg-10">
     The non-code works available on this website (e.g. articles in source and compiled form, images, etc.) are available under the
