added info text for articles page

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -17,8 +17,22 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<p class="section-heading">
-  On this page you can find a list of articles I wrote about various topics.
-</p>
+<span class="chapter-heading">
+  Personal Articles
+</span>
+<br />
+
+<span class="justify-text">
+  From time to time I am just playing around with some things.
+  In case these things required me to do some more intense research and were not easy
+  to get some answers on, I write articles about them.
+  With these articles I hope to make the life of some people easier,
+  so they do not have to repeat the research I did.
+  But, these articles also come in handy for me, as I also just forget things as time goes on.
+  Therefore, it is prettty nice to have a small archive of tutorials.
+</span>
+
+<br />
+<br />
 
 <div id="articles-list"></div>
