started to work on home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,4 +17,4 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-this is in home
+<p class="chapter-heading">Foo</p>
