switched back to paragraphs

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -17,10 +17,9 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<span class="chapter-heading">
+<p class="chapter-heading">
   Personal Articles
-</span>
-<br />
+</p>
 
 <span class="justify-text">
   From time to time I am just playing around with some things.
