--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -17,7 +17,7 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<span class="chapter-heading">Copyright notices</span><br />
+<p class="chapter-heading">Copyright notices</p>
 
 <p>On this page you find all copyright notices regarding this website's content.</p>
 <div class="row">
