--- a/pages/home.html
+++ b/pages/home.html
@@ -17,4 +17,5 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<p class="chapter-heading">Foo</p>
+<p class="chapter-heading">About me...</p>
+<p>bla</p>
