added basic layout

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,5 +17,8 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<p class="chapter-heading">About me...</p>
-<p>bla</p>
+<p class="chapter-heading">About me, J&ouml;rn Neumeyer...</p>
+<p class="section-heading">...as a person</p>
+<p></p>
+<p class="section-heading">...as a CTO</p>
+<p></p>
