added link to gpl3

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -25,7 +25,8 @@
     <span class="bold">source code of joern-neumeyer.de</span>
   </div>
   <div class="col-sm-12 col-lg-10">
-    The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a>, licensed under GPL-3.0-or-later.
+    The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a>,
+    licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank" rel="noreferrer">GPL-3.0-or-later</a>.
   </div>
 </div>
 <br />
