added general text; adjusted cto text block

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,8 +17,22 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
+<p class="chapter-heading">Hello and welcome to my homepage!</p>
+
+<p>
+  Welcome to my small personal spot on the internet.
+  This is the place where I put all the things which I think are useful.
+  So you'll find information about me, what I do, and things that I learned.
+  As information is most useful when it is shared, I want to share it in a way,
+  that is most useful to everyone.
+</p>
+<p>
+  If you want to know how you can share your works in ways that help the public the most,
+  please check out the sub-page about <a class="clickable" onclick="clickNavItem('copyright')">copyright</a>.
+</p>
+
 <p class="chapter-heading">About me, J&ouml;rn Neumeyer...</p>
 <p class="section-heading">...as a person</p>
 <p></p>
-<p class="section-heading">...as a CTO</p>
+<p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
 <p></p>
