added copyright info text

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -18,7 +18,18 @@
 -->
 
 <p class="chapter-heading">Copyright notices</p>
-
+<p>
+  Copyright is useful to protect your (intellectual) property.
+  In itself that is not a bad thing.
+  You should decide how the works you create can or can't be used.
+  However, if you are not sure how you should license your next project,
+  consider publishing it under a <a href="https://www.gnu.org/copyleft/">Copyleft</a> license,
+  such as the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a>
+  for software, or the <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution-ShareAlike 4.0 International Public License</a> for works in general.
+  In case you would like to get a brief introduction to these licenses you can check out the videos
+  <a href="https://www.youtube.com/watch?v=JlIrSMzF8T4" target="_blank" rel="noreferrer">What are the GPL and LGPL and how do they differ?</a> from Todd Harris and
+  <a href="https://player.vimeo.com/video/13590841" target="_blank" rel="noreferrer">Wanna Work Together?</a> from Creative Commons.
+</p>
 <p>On this page you find all copyright notices regarding this website's content.</p>
 <div class="row">
   <div class="col-sm-12 col-lg-2">
