added link to foss article

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -29,6 +29,9 @@
   In case you would like to get a brief introduction to these licenses you can check out the videos
   <a href="https://www.youtube.com/watch?v=JlIrSMzF8T4" target="_blank" rel="noreferrer">What are the GPL and LGPL and how do they differ?</a> from Todd Harris and
   <a href="https://player.vimeo.com/video/13590841" target="_blank" rel="noreferrer">Wanna Work Together?</a> from Creative Commons.
+  For those familiar with open source software, it may also be interesting to have a look
+  at the article <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.html" target="_blank" rel="noreferrer">Why Open Source misses the point of Free Software</a>
+  by Richard Stallman.
 </p>
 <p>On this page you find all copyright notices regarding this website's content.</p>
 <div class="row">
