started to write my about text

--- a/pages/home.html
+++ b/pages/home.html
@@ -34,6 +34,22 @@
 <p class="chapter-heading">About me, J&ouml;rn Neumeyer...</p>
 <p class="section-heading">...in general</p>
 <p class="section-heading">...as a person</p>
-<p></p>
+<p>
+  I have always been interested in technology.
+  This interest originated from the influence of my father
+  and his job as an industrial grinding machine technician.
+  But my interest in IT and especially programming only started in the last
+  year of middleschool.
+  Back then, I was playing an online multiplayer game, which required you to
+  either cheat or invest a significant amount of money.
+  Since I have not been willing to pay money for that game, I went for the cheaating path.
+</p>
+<p>
+  As time went on, more and more of these cheats got depected.
+  So far so normal.
+  But at some point, the anti-cheat of the game producer would not just detect
+  the cheats but also the DLL injectors used to load the cheats into the game's process.
+  That was a huge issue. So, I searched the internet to find ways of creating my own DLL injector.
+</p>
 <p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
 <p></p>
