added link to license copy

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -41,6 +41,7 @@
   <div class="col-sm-12 col-lg-10">
     The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a>,
     licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank" rel="noreferrer">GPL-3.0-or-later</a>.
+    A copy of that license can be found in the file <a href="LICENSE">LICENSE</a>.
   </div>
 </div>
 <br />
