moved story block to page bottom

--- a/pages/home.html
+++ b/pages/home.html
@@ -34,6 +34,9 @@
 <p class="chapter-heading">About me, J&ouml;rn Neumeyer...</p>
 <p class="section-heading">...in general</p>
 <p class="section-heading">...as a person</p>
+<p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
+<p></p>
+<p class="section-heading">...and how I got into IT</p>
 <p>
   I have always been interested in technology.
   This interest originated from the influence of my father
@@ -51,5 +54,3 @@
   the cheats but also the DLL injectors used to load the cheats into the game's process.
   That was a huge issue. So, I searched the internet to find ways of creating my own DLL injector.
 </p>
-<p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
-<p></p>
