started to add peersonal text

--- a/pages/home.html
+++ b/pages/home.html
@@ -33,7 +33,10 @@
 
 <p class="chapter-heading">About me, J&ouml;rn Neumeyer...</p>
 <p class="section-heading">...as a person</p>
-<p></p>
+<p>
+  As you've probably already read, my name is J&ouml;rn Neumeyer,
+  I am a German, studying Software Engineering in the Netherlands.
+</p>
 <p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
 <p></p>
 <p class="section-heading">...and how I got into IT</p>
@@ -48,7 +51,7 @@
   Since I have not been willing to pay money for that game, I went for the cheaating path.
 </p>
 <p>
-  As time went on, more and more of these cheats got depected.
+  As time went on, more and more of these cheats got detected.
   So far so normal.
   But at some point, the anti-cheat of the game producer would not just detect
   the cheats but also the DLL injectors used to load the cheats into the game's process.
