--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -17,9 +17,9 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<p class="chapter-heading">Copyright notices</p>
+<p class="chapter-heading">Copyright and left</p>
 <p>
-  Copyright is useful to protect your (intellectual) property.
+  Copyright is useful to protect your intellectual property.
   In itself that is not a bad thing.
   You should decide how the works you create can or can't be used.
   However, if you are not sure how you should license your next project,
@@ -34,7 +34,7 @@
   at the article <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.html" target="_blank" rel="noreferrer">Why Open Source misses the point of Free Software</a>
   by Richard Stallman.
 </p>
-<p>On this page you find all copyright notices regarding this website's content.</p>
+<p class="section-heading">Copyright notices</p>
 <div class="row">
   <div class="col-sm-12 col-lg-2">
     <span class="bold">source code of joern-neumeyer.de</span>
