--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -19,6 +19,12 @@
 
 <p class="chapter-heading">Copyright and left</p>
 <p>
+  In this section you will find some Copyright notices, my and some
+  other people's take on Copyright and Copyleft, as well as some sources
+  for regarding Copyleft explainations and license examples.
+</p>
+<p class="section-heading">Copyleft</p>
+<p>
   Copyright is useful to protect your intellectual property.
   In itself that is not a bad thing.
   You should decide how the works you create can or can't be used.
@@ -26,7 +32,11 @@
   consider publishing it under a <a href="https://www.gnu.org/copyleft/">Copyleft</a> license,
   such as the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a>
   for software, or the <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution-ShareAlike 4.0 International Public License</a>
-  for other works, if you want derived works to also be available for other to build upon.
+  for other works. With such license you enable everybody to freely build their works based on yours,
+  as long as they also allow other people to create new works under the same copyleft license.
+  That way your work is free to use - free as in freedom.
+</p>
+<p>
   In case you would like to get a brief introduction to these licenses you can check out the videos
   <a href="https://www.youtube.com/watch?v=JlIrSMzF8T4" target="_blank" rel="noreferrer">What are the GPL and LGPL and how do they differ?</a> from Todd Harris and
   <a href="https://player.vimeo.com/video/13590841" target="_blank" rel="noreferrer">Wanna Work Together?</a> from Creative Commons.
