--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -62,7 +62,7 @@
   </div>
   <div class="col-sm-12 col-lg-10">
     The non-code works available on this website (e.g. articles in source and compiled form, images, etc.) are available under the
-    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution 4.0 International License</a>, unless specified otherwise.
+    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution-ShareAlike 4.0 International License</a>, unless specified otherwise.
   </div>
 </div>
 <br />
