added copyleft license logos; adjusted anchors

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -23,14 +23,22 @@
   other people's take on Copyright and Copyleft, as well as some sources
   for regarding Copyleft explainations and license examples.
 </p>
-<p class="section-heading">Copyleft</p>
+<p class="section-heading">
+  Copyleft licensing
+  <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" rel="noreferrer">
+    <img class="valign-middle" src="https://www.gnu.org/graphics/gplv3-with-text-136x68.png" alt="GPL-3.0 logo" />
+  </a>
+  <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noreferrer">
+    <img class="valign-middle" src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-sa.svg" height="68" alt="CC BY-SA 4.0 logo" />
+  </a>
+</p>
 <p>
   Copyright is useful to protect your intellectual property.
   In itself that is not a bad thing.
   You should decide how the works you create can or can't be used.
   However, if you are not sure how you should license your next project,
-  consider publishing it under a <a href="https://www.gnu.org/copyleft/">Copyleft</a> license,
-  such as the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a>
+  consider publishing it under a <a href="https://www.gnu.org/copyleft/" target="_blank" rel="noreferrer">Copyleft</a> license,
+  such as the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank" rel="noreferrer">GNU General Public License v3.0</a>
   for software, or the <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution-ShareAlike 4.0 International Public License</a>
   for other works. With such license you enable everybody to freely build their works based on yours,
   as long as they also allow other people to create new works under the same copyleft license.
