updated contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,8 +17,8 @@
  * along with joern-neumeyer.de. If not, see <https://www.gnu.org/licenses/>.
 -->
 
-<p>If you consider getting in touch with me, you have the following options:</p>
-<ol>
-  <li>Send an E-Mail to <a href="mailto:contact@joern-neumeyer.de">contact@joern-neumeyer.de</a></li>
-  <li>a</li>
-</ol>
+<p class="chapter-heading">Contact me</p>
+<p>
+  In case you wanna get in touch with me, just send an E-Mail to
+  <a href="mailto:contact@joern-neumeyer.de">contact@joern-neumeyer.de</a>.
+</p>
