--- a/pages/home.html
+++ b/pages/home.html
@@ -36,9 +36,11 @@
 <p>
   As you've probably already read, my name is J&ouml;rn Neumeyer,
   I am a German, studying Software Engineering in the Netherlands.
+  I'm mostly busy with my study except when I'm busy with my co-founded company Code Lake.
+  In case I actually have some spare time, I mostly spend it on learning new things or helping others to learn.
 </p>
-<p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
-<p></p>
+<!--<p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
+<p></p>-->
 <p class="section-heading">...and how I got into IT</p>
 <p>
   I have always been interested in technology.
@@ -56,4 +58,9 @@
   But at some point, the anti-cheat of the game producer would not just detect
   the cheats but also the DLL injectors used to load the cheats into the game's process.
   That was a huge issue. So, I searched the internet to find ways of creating my own DLL injector.
+</p>
+<p>
+  Long story short, I didn't find a proper working tutorial on DLL injectors.
+  But still, the entire topic got me extremly interested in learning how software works and how it is written.
+  A couple of years of learning in school as well as in my free time went by and now I would consider myself a pretty okayish software engineer and GNU/Linux user.
 </p>
