fixed grammar and typos

--- a/pages/home.html
+++ b/pages/home.html
@@ -22,7 +22,7 @@
 <p>
   Welcome to my small personal spot on the internet.
   This is the place where I put all the things which I think are useful.
-  So you'll find information about me, what I do, and things that I learned.
+  So you'll find information about me, what I do, and things I learned.
   As information is most useful when it is shared, I want to share it in a way,
   that is most useful to everyone.
 </p>
@@ -50,14 +50,15 @@
   year of middleschool.
   Back then, I was playing an online multiplayer game, which required you to
   either cheat or invest a significant amount of money.
-  Since I have not been willing to pay money for that game, I went for the cheaating path.
+  Since I have not been willing to pay money for that game, I went for the cheating path.
 </p>
 <p>
   As time went on, more and more of these cheats got detected.
   So far so normal.
-  But at some point, the anti-cheat of the game producer would not just detect
+  But at some point, the anti-cheat of the game maker would not just detect
   the cheats but also the DLL injectors used to load the cheats into the game's process.
-  That was a huge issue. So, I searched the internet to find ways of creating my own DLL injector.
+  That was a huge issue.
+  So, I searched the internet to find ways of creating my own DLL injector.
 </p>
 <p>
   Long story short, I didn't find a proper working tutorial on DLL injectors.
