updated copyright page

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -53,35 +53,45 @@
   by Richard Stallman.
 </p>
 <p class="section-heading">Copyright notices</p>
-<div class="row">
-  <div class="col-sm-12 col-lg-2">
-    <span class="bold">source code of joern-neumeyer.de</span>
-  </div>
-  <div class="col-sm-12 col-lg-10">
-    The source code of this page is available on <a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a>,
-    licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank" rel="noreferrer">GPL-3.0-or-later</a>.
-    A copy of that license can be found in the file <a href="LICENSE">LICENSE</a>.
-  </div>
-</div>
+<table class="table table--responsive">
+  <thead>
+    <tr>
+      <th>Subject</th>
+      <th>Source</th>
+      <th>License</th>
+      <th>Info</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td data-th="Subject">joern-neumeyer.de</td>
+      <td data-th="Source"><a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a></td>
+      <td data-th="License"><a href="/LICENSE" target="_blank" rel="noreferrer">GPL-3.0-or-later</a></td>
+      <td data-th="Info">
+        This page has been implemented with plain HTML and JavaScript.
+        All the corresponding source code may be used freely under the terms of the specified license.
+      </td>
+    </tr>
+    <tr>
+      <td data-th="Subject">joern-neumeyer.de Artices</td>
+      <td data-th="Source"><a href="https://github.com/joernneumeyer/joern-neumeyer.de/tree/master/articles" target="_blank" rel="noreferrer">GitHub</a></td>
+      <td data-th="License"><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">CC-BY-SA-4.0</a></td>
+      <td data-th="Info">
+        The articles sub-directory contains all articles I wrote.
+        They may be freely used under the terms of the specified license.
+      </td>
+    </tr>
+    <tr>
+      <td data-th="Subject">Sierra Library (sierra.min.css)</td>
+      <td data-th="Source"><a href="https://github.com/sierra-library/sierra" target="_blank" rel="noreferrer">GitHub</a></td>
+      <td data-th="License"><a href="https://github.com/sierra-library/sierra/blob/master/LICENSE.md" target="_blank" rel="noreferrer">GPL-2.0-or-later</a></td>
+      <td data-th="Info">
+        Sierra Library is a small, free SCSS library.
+        All styling of this website is based on it.
+        The minified file was added to this pages source code.
+        See <a href="/sierra.min.css">sierra.min.css</a>.
+      </td>
+    </tr>
+  </tbody>
+</table>
 <br />
-<div class="row">
-  <div class="col-sm-12 col-lg-2">
-    <span class="bold">non-code works on joern-neumeyer.de</span>
-  </div>
-  <div class="col-sm-12 col-lg-10">
-    The non-code works available on this website (e.g. articles in source and compiled form, images, etc.) are available under the
-    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">Creative Commons Attribution-ShareAlike 4.0 International License</a>, unless specified otherwise.
-  </div>
-</div>
-<br />
-<div class="row">
-  <div class="col-sm-12 col-lg-2">
-    <span class="bold">Sierra Library</span>
-  </div>
-  <div class="col-sm-12 col-lg-10">
-    Styling is powered by <a href="https://sierra-library.github.io" target="_blank" rel="noreferrer">Sierra library</a>, licensed under GPL-2.0-or-later.
-    No copyright notices were found in the source code. Main contributors on GitHub:
-    <a href="https://github.com/JoanClaret" target="_blank" rel="noreferrer">JoanClaret</a>,
-    <a href="https://github.com/maraisr" target="_blank" rel="noreferrer">maraisr</a>
-  </div>
-</div>
