removed about content from home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -28,40 +28,5 @@
 </p>
 <p>
   If you want to know how you can share your works in ways that help the public the most,
-  please check out the sub-page about <a class="clickable" onclick="clickNavItem('copyright')">copyright</a>.
-</p>
-
-<p class="chapter-heading">About me, J&ouml;rn Neumeyer...</p>
-<p class="section-heading">...as a person</p>
-<p>
-  As you've probably already read, my name is J&ouml;rn Neumeyer,
-  I am a German, studying Software Engineering in the Netherlands.
-  I'm mostly busy with my study except when I'm busy with my co-founded company Code Lake.
-  In case I actually have some spare time, I mostly spend it on learning new things or helping others to learn.
-</p>
-<!--<p class="section-heading">...as the CTO and Co-Founder of <a href="https://code-lake.com/" rel="noreferrer" target="_blank">Code Lake</a></p>
-<p></p>-->
-<p class="section-heading">...and how I got into IT</p>
-<p>
-  I have always been interested in technology.
-  This interest originated from the influence of my father
-  and his job as an industrial grinding machine technician.
-  But my interest in IT and especially programming only started in the last
-  year of middleschool.
-  Back then, I was playing an online multiplayer game, which required you to
-  either cheat or invest a significant amount of money.
-  Since I have not been willing to pay money for that game, I went for the cheating path.
-</p>
-<p>
-  As time went on, more and more of these cheats got detected.
-  So far so normal.
-  But at some point, the anti-cheat of the game maker would not just detect
-  the cheats but also the DLL injectors used to load the cheats into the game's process.
-  That was a huge issue.
-  So, I searched the internet to find ways of creating my own DLL injector.
-</p>
-<p>
-  Long story short, I didn't find a proper working tutorial on DLL injectors.
-  But still, the entire topic got me extremly interested in learning how software works and how it is written.
-  A couple of years of learning in school as well as in my free time went by and now I would consider myself a pretty okayish software engineer and GNU/Linux user.
+  please check out the page about <a class="clickable" onclick="clickNavItem('copyright')">copyright and copyleft</a>.
 </p>
