removed row class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <section class="container">
       <header>
-        <div class="tabs row" id="header-list"></div>
+        <div class="tabs" id="header-list"></div>
       </header>
       <main>
         <noscript>
